--- a/Exercises/RecurTutor/rechwrcra16PROG.html
+++ b/Exercises/RecurTutor/rechwrcra16PROG.html
@@ -10,14 +10,17 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-    <script src="../../lib/odsaStyle-min.css"></script>
- 
  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
-
-
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  </script>     
+ 
  
 </head>
 
@@ -37,13 +40,7 @@
     <br />
     </h4>
     <p></p>
-      <script>
-  var editor = CodeMirror.fromTextArea(codeTextarea, {
-    lineNumbers: true,
-    mode:  "text/x-java"
-  });
   
-  </script>
     <textarea  id="codeTextarea">String decibinary (int num)
 {
  if ( num < 2)
@@ -53,14 +50,17 @@
 }
 
 </textarea></p>
+ 
 
-      <div class="question">
+       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";
+          window.summexName= "rechwrcra16PROG";
          //return "openPop";
         </div>
       </div>
@@ -69,6 +69,6 @@
     </div>
   </div>
 </div>
- 
+
 </body>
 </html>
