--- a/Exercises/RecurTutor/recw23PROG.html
+++ b/Exercises/RecurTutor/recw23PROG.html
@@ -17,7 +17,12 @@
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
- 
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  </script>     
 
 </head>
 <body  data-height="600" data-width="950">
@@ -35,13 +40,7 @@
       <p class="problem" id = "test"> Given the following recursive function signature, write the function code such that this function returns the given string in a reverse order. <br />
 </h4>
  <p></p>
-  <script>
-  var editor = CodeMirror.fromTextArea(codeTextarea, {
-    lineNumbers: true,
-    mode:  "text/x-java"
-  });
-  
-  </script>
+ 
 <textarea  id="codeTextarea"> String ReverseStringRecursive (String str)
 {
 
@@ -59,9 +58,11 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";
+          window.summexName= "recw23PROG";
          //return "openPop";
         </div>
       </div>
@@ -70,6 +71,6 @@
     </div>
   </div>
 </div>
- 
+
 </body>
 </html>
