--- a/Exercises/RecurTutor/recwbc1PROG.html
+++ b/Exercises/RecurTutor/recwbc1PROG.html
@@ -57,8 +57,10 @@ int largest(int[] numbers, int index) {
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+      <div class="guess"> [ [ editor.getValue() ]  ] </div>
         <div class="validator-function">
+	     window.codeValue = editor.getValue();
+         window.progexType= "recursion";
          window.summexName= "recwbc1PROG";
         </div>
       </div>
