--- a/Exercises/RecurTutor/recwbca2PROG.html
+++ b/Exercises/RecurTutor/recwbca2PROG.html
@@ -51,9 +51,11 @@ String recursiveprint(String[] list, int index) {
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         window.summexName = "recwbca2PROG";
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";          
+          window.summexName = "recwbca2PROG";
         </div>
       </div>
       <div class="hints">
