--- a/Exercises/RecurTutor/recwrc13PROG.html
+++ b/Exercises/RecurTutor/recwrc13PROG.html
@@ -50,9 +50,11 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+      <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-        window.summexName=  "recwrc13PROG";
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";    
+          window.summexName=  "recwrc13PROG";
         </div>
       </div>
       <div class="hints">
