--- a/Exercises/RecurTutor/recwrc6PROG.html
+++ b/Exercises/RecurTutor/recwrc6PROG.html
@@ -53,8 +53,10 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";    
          window.summexName=  "recwrc6PROG";
         </div>
       </div>
