--- a/Exercises/RecurTutor/rechw2bc18PROG.html
+++ b/Exercises/RecurTutor/rechw2bc18PROG.html
@@ -10,11 +10,16 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  </script>     
  
 
 </head>
@@ -35,13 +40,7 @@
     <br />
     </h4>
     <p></p>
-     <script>
-  var editor = CodeMirror.fromTextArea(codeTextarea, {
-    lineNumbers: true,
-    mode:  "text/x-java"
-  });
   
-  </script>
     <textarea  id="codeTextarea">boolean isReverse(String s1, String s2) {  
  if //<<Missing condition 1>>  
    return true;
@@ -61,9 +60,11 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";
+          window.summexName= "rechw2bc18PROG";
          //return "openPop";
         </div>
       </div>
@@ -72,6 +73,6 @@
     </div>
   </div>
 </div>
- 
+
 </body>
 </html>
