--- a/Exercises/RecurTutor/rechwrc14PROG.html
+++ b/Exercises/RecurTutor/rechwrc14PROG.html
@@ -10,12 +10,18 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
- 
- 
-  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+       
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  </script>     
+ 
   
 </head>
 <body  data-height="600" data-width="950">
@@ -35,13 +41,7 @@
     <br />
     </h4>
     <p></p>
-  <script>
-  var editor = CodeMirror.fromTextArea(codeTextarea, {
-    lineNumbers: true,
-    mode:  "text/x-java"
-  });
   
-  </script>
     <textarea  id="codeTextarea">long Fibonacci(int n) 
 {
   if (n > 2)
@@ -52,14 +52,15 @@
 </textarea></p>
 
 
-
       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";          
+          window.summexName= "rechwrc14PROG";
          //return "openPop";
         </div>
       </div>
