--- a/Exercises/RecurTutor/rechwrc17PROG.html
+++ b/Exercises/RecurTutor/rechwrc17PROG.html
@@ -10,12 +10,18 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  </script>     
  
+
 </head>
 
 <body  data-height="650" data-width="950">
@@ -34,14 +40,7 @@
     <br />
     </h4>
     <p></p>
-     <script>
-  var editor = CodeMirror.fromTextArea(codeTextarea, {
-    lineNumbers: true,
-    mode:  "text/x-java"
-  });
-  
-  </script>
-
+ 
     <textarea  id="codeTextarea">int recursiveMin(int numbers[] , int startIndex)
 {
   if(startIndex+1 == numbers.length)
@@ -52,13 +51,16 @@
 }
 </textarea></p>
 
+
       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+		  window.progexType= "recursion";
+          window.codeValue = editor.getValue();
+          window.summexName= "rechwrc17PROG";       
          //return "openPop";
         </div>
       </div>
@@ -67,6 +69,7 @@
     </div>
   </div>
 </div>
- 
+
 </body>
 </html>
+
