--- a/Exercises/RecurTutor/recw25PROG.html
+++ b/Exercises/RecurTutor/recw25PROG.html
@@ -15,7 +15,12 @@
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
- 
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  </script>     
 
 </head>
 <body  data-height="650" data-width="950">
@@ -35,13 +40,7 @@
  <br />
 </h4>
  <p></p>
-  <script>
-  var editor = CodeMirror.fromTextArea(codeTextarea, {
-    lineNumbers: true,
-    mode:  "text/x-java"
-  });
-  
-  </script>
+ 
 <textarea  id="codeTextarea">boolean isSubsetSum(int set[], int n, int sum)
 {		
 
@@ -50,13 +49,16 @@
 }		
 </textarea></p>
 
+
       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";
+          window.summexName= "recw25PROG";
          //return "openPop";
         </div>
       </div>
@@ -65,6 +67,6 @@
     </div>
   </div>
 </div>
- 
+
 </body>
 </html>
