--- a/Exercises/RecurTutor/recw26PROG.html
+++ b/Exercises/RecurTutor/recw26PROG.html
@@ -10,12 +10,16 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
- 
+
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
- 
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  </script>  
   
 </head>
 <body  data-height="600" data-width="950">
@@ -35,14 +39,7 @@
  <br />
 </h4>
  <p></p>
-  <script>
-  var editor = CodeMirror.fromTextArea(codeTextarea, {
-    lineNumbers: true,
-    mode:  "text/x-java"
-  });
-  
-  </script>
-
+ 
 <textarea  id="codeTextarea">int noOfPath (int n)
 {		
 
@@ -58,9 +55,11 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";
+          window.summexName= "recw26PROG";
          //return "openPop";
         </div>
       </div>
@@ -69,6 +68,6 @@
     </div>
   </div>
 </div>
- 
+
 </body>
 </html>
