--- a/Exercises/RecurTutor/recw27PROG.html
+++ b/Exercises/RecurTutor/recw27PROG.html
@@ -15,7 +15,12 @@
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
-
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  </script>     
 
   
 </head>
@@ -36,13 +41,7 @@
  <br />
 </h4>
 <p></p>
-  <script>
-  var editor = CodeMirror.fromTextArea(codeTextarea, {
-    lineNumbers: true,
-    mode:  "text/x-java"
-  });
-  
-  </script>
+ 
 <textarea  id="codeTextarea"> void removeDuplicates(ArrayList<String> list, int counter)
 {
 
@@ -56,13 +55,16 @@
 }	
 </textarea></p>
 
+
       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";
+          window.summexName= "recw27PROG";
          //return "openPop";
         </div>
       </div>
@@ -71,6 +73,6 @@
     </div>
   </div>
 </div>
- 
+
 </body>
 </html>
