--- a/Exercises/RecurTutor/recw29PROG.html
+++ b/Exercises/RecurTutor/recw29PROG.html
@@ -10,13 +10,17 @@
     window.OpenPopKa = true;
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
- 
+
  
   <script src="../../lib/codemirror/lib/codemirror.js"></script>
   <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
-
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    mode:  "text/x-java"
+  });
+  </script>  
 
   
 </head>
@@ -38,13 +42,7 @@
  <br />
 </h4>
 <p></p>
-  <script>
-  var editor = CodeMirror.fromTextArea(codeTextarea, {
-    lineNumbers: true,
-    mode:  "text/x-java"
-  });
-  
-  </script>
+ 
 <textarea  id="codeTextarea">boolean isBalanced(String str)
 {
 
@@ -60,13 +58,15 @@
 }
 </textarea></p>
 
-      <div class="question">
+     <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";
+          window.summexName= "recw29PROG";
          //return "openPop";
         </div>
       </div>
@@ -75,6 +75,6 @@
     </div>
   </div>
 </div>
- 
+
 </body>
 </html>
