--- a/Exercises/RecurTutor/recwbcrc3PROG.html
+++ b/Exercises/RecurTutor/recwbcrc3PROG.html
@@ -50,9 +50,11 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+       <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         window.summexName=  "recwbcrc3PROG";
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";    
+          window.summexName=  "recwbcrc3PROG";
         </div>
       </div>
       <div class="hints">
