--- a/Exercises/RecurTutor/recwrc10PROG.html
+++ b/Exercises/RecurTutor/recwrc10PROG.html
@@ -55,9 +55,10 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+      <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";    
          window.summexName=  "recwrc10PROG";
         </div>
       </div>
