--- a/Exercises/RecurTutor/recwrc11PROG.html
+++ b/Exercises/RecurTutor/recwrc11PROG.html
@@ -50,10 +50,11 @@ return //<<Missing a Recursive call>>
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+        <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         
-        window.summexName= "recwrc11PROG";
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";    
+          window.summexName= "recwrc11PROG";
         </div>
       </div>
       <div class="hints">
