--- a/Exercises/RecurTutor/recwrc7PROG.html
+++ b/Exercises/RecurTutor/recwrc7PROG.html
@@ -51,9 +51,11 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ $('#codeTextarea').val() ] </div>
+      <div class="guess"> [ editor.getValue() ] </div>
         <div class="validator-function">
-         window.summexName=  "recwrc7PROG";
+          window.codeValue = editor.getValue();
+          window.progexType= "recursion";    
+          window.summexName=  "recwrc7PROG";
         </div>
       </div>
       <div class="hints">
