--- a/Exercises/RecurTutor/rectFIB2rc18.html
+++ b/Exercises/RecurTutor/rectFIB2rc18.html
@@ -5,7 +5,17 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+   
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script>
 </head>
 
 <body  data-height="550" data-width="950">
@@ -37,17 +47,18 @@ function checkAnswer(answer ,i) {
     <div id="problem-type-or-description">
       <p class="question"> 
       Consider the following code::
-      <pre>	
-      void asterisksPrinter(int i)
-      {	
-	if (i > 1)
-	{
-	   asterisksPrinter(i / 2);	
-           asterisksPrinter(i / 2);	
-        }	
-	System.out.print( "*" );
-       }
-	</pre>
+     <textarea id="codeTextarea" >	
+ void asterisksPrinter(int i)
+{	
+   if (i > 1)
+  {
+   asterisksPrinter(i / 2);	
+   asterisksPrinter(i / 2);	
+  }	
+  
+  System.out.print( "*" );
+}
+	</textarea>
       How many asterisks are printed by the method call asterisksPrinter(<var>i</var>)?(Either write the number of asterisks , or write “infinite recursion”.)
       </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
