--- a/Exercises/RecurTutor/rectFIB2rc5.html
+++ b/Exercises/RecurTutor/rectFIB2rc5.html
@@ -5,7 +5,17 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+  
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
   <style> 
    #problemarea { height: 800px;}
   </style>
@@ -42,18 +52,18 @@ function checkAnswer(answer , k , n) {
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <pre> 		
-     public int f(int k , int n)
-     {
-      if(n==k)
-	return k;
-      else
-	if(n > k)
-	  return f(k, n-k);
-	else
-	  return f(k-n, n);
-      }
-      </pre>		
+      <textarea id="codeTextarea" >	 		
+ public int f(int k , int n)
+{
+  if(n==k)
+   return k;
+  else
+   if(n > k)
+    return f(k, n-k);
+  else
+    return f(k-n, n);
+ }
+      </textarea>		
      What value is returned by the call f(<var>k</var>,<var>n</var>)? (Either write a number, or write “infinite recursion”.)</p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
