--- a/Exercises/RecurTutor/rectFIBbwd3.html
+++ b/Exercises/RecurTutor/rectFIBbwd3.html
@@ -5,7 +5,17 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+  
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
 </head>
  
 <body  data-height="550" data-width="950">
@@ -24,15 +34,15 @@ function checkAnswer(answer) {
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <pre>
-      public void dosomething (int n) {
-        if(n>0) 
-        {
-	 dosomething(n-1);
-	 System.out.print(n);
-        }		
-      }
-      </pre>		
+      <textarea id="codeTextarea" >
+public void dosomething (int n) {
+ if(n>0) 
+ {
+  dosomething(n-1);
+  System.out.print(n);
+ }		
+}
+      </textarea>		
       What will be printed when "dosomething(5)" is called? (Either write a sequence of numbers, or write "infinite recursion".)</p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
