--- a/Exercises/RecurTutor/rectFIBfwd13.html
+++ b/Exercises/RecurTutor/rectFIBfwd13.html
@@ -5,7 +5,17 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+  
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
 </head>
  
 <body  data-height="550" data-width="950">
@@ -39,17 +49,17 @@ function checkAnswer(answer , A) {
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <pre> 		
-      int mystery (int[] numbers, int index) {
-	if(index==numbers.length-1) {	
-          return numbers[index];	
-	}	
-	else if(numbers[index] > numbers[index+1]) {
-	    numbers[index+1] = numbers[index];
-	}
-        return mystery(numbers,index+1);		
-      }
-      </pre>		
+      <textarea id="codeTextarea" > 		
+int mystery (int[] numbers, int index) {
+   if(index==numbers.length-1) {	
+	  return numbers[index];	
+   }	
+   else if(numbers[index] > numbers[index+1]) {
+      numbers[index+1] = numbers[index];
+   }
+   return mystery(numbers,index+1);		
+ }
+      </textarea>		
      If initially numbers=[ <var> A </var> ] and index=0 What will be the value returned by this mystery function? </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
