--- a/Exercises/RecurTutor/rectFIBir7.html
+++ b/Exercises/RecurTutor/rectFIBir7.html
@@ -5,7 +5,17 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+   
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
 </head>
  
 <body  data-height="550" data-width="950">
@@ -25,15 +35,15 @@ function checkAnswer(answer) {
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <pre> 		
-     int mystery(int a, int b) 
-     {
-      if (b==1)	
-	return a;
-      else
-	return a + mystery(a, b-1);
-     }
-      </pre>		
+      <textarea id="codeTextarea" > 		
+ int mystery(int a, int b) 
+ {
+  if (b==1)	
+   return a;
+  else
+   return a + mystery(a, b-1);
+ }
+      </textarea>		
      What is the return of calling mystery(2,0)? (Either write a number, or write "infinite recursion".) </p>
       <br> <textarea rows="1" cols="20" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
