--- a/Exercises/RecurTutor/rectFIBmystbc1.html
+++ b/Exercises/RecurTutor/rectFIBmystbc1.html
@@ -7,7 +7,19 @@
   <script src="../../lib/jquery-ui.min.js">
   </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
+ 
+
 </head>
  
 <body  data-height="550" data-width="950">
@@ -30,15 +42,14 @@ function checkAnswer(answer , a) {
     <div id="problem-type-or-description">
       <p class="question">     
       Consider the following function:
-      <pre>
-      int mystery(int a, int b) 
-      {
-	if (b==1)	  
-         return a;	
-	else
-	 return a + mystery(a, b-1);	
-      }
-      </pre>		
+      <textarea id="codeTextarea" >
+int mystery(int a, int b) 
+{
+ if (b==1)	  
+  return a;	
+ else
+  return a + mystery(a, b-1);	
+}</textarea>		
       What is the return of calling mystery(<var>a</var>, 1)?</p>
       <br> <textarea rows="1" cols="9" style="resize:none"  id="answerTextarea" ></textarea></p>
       <div class="solution" data-type="custom">
