--- a/Exercises/RecurTutor/rectMCQbc16.html
+++ b/Exercises/RecurTutor/rectMCQbc16.html
@@ -5,7 +5,17 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+  
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
   <style> 
    #problemarea { height: 750px;}
   </style>
@@ -17,24 +27,24 @@
     <div id="problem-type-or-description">
       <p class="question"> 
       Consider the following code:
-      <pre>	
-     void superWriteVertical(int number)
-     // Postcondition: The digits of the number have been written,
-     // stacked vertically. If number is negative, then a negative sign appears on top.
-     {
-      if (number < 0)
-      { System.out.println("-"); 
-        superWriteVertical(-number);
-      }
-      else if (number < 10)
-        System.out.println(number);
-      else
-      {    
-        superWriteVertical(number / 10);
-        System.out.println(number % 10);
-      }
-     }
-	</pre>
+      <textarea id="codeTextarea" >	
+ void superWriteVertical(int number)
+ // Postcondition: The digits of the number have been written,
+ // stacked vertically. If number is negative, then a negative sign appears on top.
+ {
+  if (number < 0)
+  { System.out.println("-"); 
+	superWriteVertical(-number);
+  }
+  else if (number < 10)
+	System.out.println(number);
+  else
+  {    
+	superWriteVertical(number / 10);
+	System.out.println(number % 10);
+  }
+ }
+	</textarea>
       What values of number are directly handled by the base case?
       </p>
 
