--- a/Exercises/RecurTutor/rectMCQerr20.html
+++ b/Exercises/RecurTutor/rectMCQerr20.html
@@ -5,8 +5,20 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+  
+  
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
  
+
 </head>
 
 <body  data-height="700" data-width="950">
@@ -16,20 +28,25 @@
       <p class="question"> 
       The writeWithCommas function is supposed to print its nonnegative int argument with commas properly inserted (every three digits, starting at the right).
       The problem is that writeWithCommas doesn’t always work as intended. Which of the following integer arguments will not be printed correctly:
-      <pre>	
-     public class Intformatter{		
-      public static void writeThreeDigits(int n){
-      	System.out.print(n/100);	
-	System.out.print((n/10)%10);		
-	System.out.print(n%10);
-       }
-       public static void writeWithCommas(int n){	
-	if(n<1000)
-          System.out.print(n);			
-        else{ writeThreeDigits(n%1000);
-	  System.out.print(",");	
-          writeWithCommas(n/1000);}}}
-	</pre>
+      <textarea id="codeTextarea" >
+public class Intformatter{		
+ public static void writeThreeDigits(int n){
+	System.out.print(n/100);	
+    System.out.print((n/10)%10);		
+    System.out.print(n%10);
+   }
+   
+  public static void writeWithCommas(int n){	
+    if(n<1000)
+	  System.out.print(n);			
+	else { 
+	  writeThreeDigits(n%1000);
+      System.out.print(",");	
+	  writeWithCommas(n/1000);
+	  }
+	}
+}
+	</textarea>
       </p>
 
       <div class="solution"><var><code>365051</code></var></div>
