--- a/Exercises/RecurTutor/rectMCQerrfx21.html
+++ b/Exercises/RecurTutor/rectMCQerrfx21.html
@@ -5,7 +5,17 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+  
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
 </head>
 
 <body  data-height="1000" data-width="1000">
@@ -14,20 +24,26 @@
     <div id="problem-type-or-description">
       <p class="question"> 
       Which of the following change in the following code of the given functions will cause function writeWithCommas to work properly:
-      <pre>	
-     public class Intformatter{		
-      public static void writeThreeDigits(int n){
-      	System.out.print(n/100);	
-	System.out.print((n/10)%10);		
-	System.out.print(n%10);
-       }
-       public static void writeWithCommas(int n){	
-	if(n<1000)
-          System.out.print(n);			
-        else{ writeThreeDigits(n%1000);
-	  System.out.print(",");	
-          writeWithCommas(n/1000);}}}
-	</pre>
+       <textarea id="codeTextarea" >
+public class Intformatter{		
+  public static void writeThreeDigits(int n){
+	System.out.print(n/100);	
+    System.out.print((n/10)%10);		
+    System.out.print(n%10);
+   }
+   
+   public static void writeWithCommas(int n){	
+    if(n<1000)
+	System.out.print(n);			
+	else
+	{ 
+	 writeThreeDigits(n%1000);
+     System.out.print(",");	
+	 writeWithCommas(n/1000);
+	 }
+	}
+}
+	</textarea>
       </p>
 
       <div class="solution"><var>Interchange the line: <pre>writeThreeDigits(n%1000);</pre> With the line:<pre>writeWithCommas(n/1000);</pre>in the writeWithCommas function.</var></div>
