--- a/Exercises/RecurTutor/rectMCQfwder14.html
+++ b/Exercises/RecurTutor/rectMCQfwder14.html
@@ -5,7 +5,19 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+ 
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
+ 
+
 </head>
 
 <body  data-height="550" data-width="950">
@@ -14,14 +26,14 @@
     <div id="problem-type-or-description">
       <p class="question"> 
       Consider the following code::
-      <pre>	
-     public void stringRecur(String s)
-     {
-	if(s.length()<15)
-	  System.out.println(s);
-	stringRecur(s + "*");
-     }	
-	</pre>
+      <textarea id="codeTextarea">	
+ public void stringRecur(String s)
+{
+  if(s.length()<15)
+    System.out.println(s);
+    
+  stringRecur(s + "*");
+ }	</textarea>
 	When will method stringRecur terminates without error?
       </p>
 
