--- a/Exercises/RecurTutor/rectMCQmrc15.html
+++ b/Exercises/RecurTutor/rectMCQmrc15.html
@@ -5,7 +5,17 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+  
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
 </head>
 
 <body  data-height="550" data-width="950">
@@ -14,15 +24,15 @@
     <div id="problem-type-or-description">
       <p class="question"> 
       Consider the following code::
-      <pre>	
-     public long foo(long x)
-     { 
-      if(x==1 || x==3)
-        return x;
-      else
-        return x * foo(x-1);
-      }
-	</pre>
+     <textarea id="codeTextarea" >		
+ public long foo(long x)
+ { 
+  if(x==1 || x==3)
+	return x;
+  else
+	return x * foo(x-1);
+  }
+	</textarea>
       Assuming no possibility of integer overflow, what will be the value of z after execution of the following statement:
       <pre>
       long z = foo(foo(3)+foo(4));
