--- a/Exercises/RecurTutor/rectMCQresrc2.html
+++ b/Exercises/RecurTutor/rectMCQresrc2.html
@@ -5,7 +5,17 @@
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
+  
+  <script src="../../lib/codemirror/lib/codemirror.js"></script>
+  <link rel="stylesheet" href="../../lib/codemirror/lib/codemirror.css">
+  <script src="../../lib/codemirror/mode/clike/clike.js"></script>
+  <script>
+  var editor = CodeMirror.fromTextArea(codeTextarea, {
+    lineNumbers: true,
+    readOnly: true,
+    mode:  "text/x-java"
+  });
+  </script> 
 </head>
 
 <body  data-height="550" data-width="950">
@@ -14,15 +24,14 @@
     <div id="problem-type-or-description">
       <p class="question"> 
       Consider the following code::
-      <pre>	
-      public int result(int n)
-      {
-	if(n==1)	
-	  return 2;
-	else		
-	  return 2 * result(n-1);	
-      }
-	</pre>
+       <textarea id="codeTextarea" >	
+ public int result(int n)
+{
+ if(n==1)	
+  return 2;
+ else		
+  return 2 * result(n-1);	
+ }</textarea>
 	If n &gt; 0, how many times will result be called to evaluate result(n)( including the initial call)?
       </p>
 
