--- a/Exercises/List/ListADTPROG.html
+++ b/Exercises/List/ListADTPROG.html
@@ -106,7 +106,7 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">Add appropriate lines of code to
-      the following function skeleton so that it make method calls on
+      the following function skeleton so that it makes method calls on
       the List ADT to  create the following list: <b> "&lt; <var>listel1</var> <var>listel2</var> | <var>listel3</var> <var>listel4</var> &gt;" </b> <br>You should assume that L is passed to the function as an empty list.  <br />
     </h4>
 
