--- a/Exercises/List/ListADTPROGQ1.html
+++ b/Exercises/List/ListADTPROGQ1.html
@@ -57,7 +57,7 @@
         <div class="validator-function">
 	     window.codeValue = editor.getValue();
 	     window.progexType= "list";
-	     window.summexName=  "ListADTPROGQ1";
+	     window.summexName=  "ListADTPROG";
          window.generatedList =  "< "+listel1 +" "+listel2 + " | " + listel3 +" "+listel4+" >";
          //return "openPop";
         </div>
