Fixed a bug in BT leaf prog ex

--- a/Exercises/RecurTutor/recCodeCompSumm1.html
+++ b/Exercises/RecurTutor/recCodeCompSumm1.html
@@ -17,6 +17,7 @@
 
 <body  data-height="580" data-width="1000">
   <div class="exercise" data-name="recwbc1PROG"></div>
+  <div class="exercise" data-name="recwbc1PROG"></div>
   <div class="exercise" data-name="recwbca2PROG"></div>
   <div class="exercise" data-name="recwbcba5PROG"></div>
   <div class="exercise" data-name="recwbcba9PROG"></div>
