--- a/Exercises/RecurTutor/recwbc1PROG.html
+++ b/Exercises/RecurTutor/recwbc1PROG.html
@@ -57,7 +57,7 @@ int largest(int[] numbers, int index) {
 	
       </div>
       <div class="solution" data-type="custom">
-      <div class="guess"> [ [ editor.getValue() ]  ] </div>
+      <div class="guess"> [ editor.getValue()  ] </div>
         <div class="validator-function">
 	     window.codeValue = editor.getValue();
          window.progexType= "recursion";
