--- a/Exercises/RecurTutor/recwbcba5PROG.html
+++ b/Exercises/RecurTutor/recwbcba5PROG.html
@@ -54,7 +54,7 @@ return mult(x-1, y) + y;
 	
       </div>
       <div class="solution" data-type="custom">
-        <div class="guess"> [ [ editor.getValue() ]  ] </div>
+        <div class="guess"> [  editor.getValue()   ] </div>
         <div class="validator-function">
 	     window.codeValue = editor.getValue();
          window.progexType= "recursion";
