--- a/Exercises/RecurTutor/recwrc8PROG.html
+++ b/Exercises/RecurTutor/recwrc8PROG.html
@@ -52,7 +52,7 @@
 	
       </div>
       <div class="solution" data-type="custom">
-       <div class="guess"> [ [ editor.getValue() ]  ] </div>
+       <div class="guess"> [ editor.getValue()  ] </div>
         <div class="validator-function">
 	     window.codeValue = editor.getValue();
          window.progexType= "recursion";
