Modifications to the Recursion Tutor

--- a/Exercises/RecurTutor/rectMCQerrfx21.html
+++ b/Exercises/RecurTutor/rectMCQerrfx21.html
@@ -23,7 +23,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> 
-      Which of the following change in the following code of the given functions will cause function writeWithCommas to work properly:
+     Which of the described code changes at the right will result in the given functions below working properly:
        <textarea id="codeTextarea" >
 public class Intformatter{		
   public static void writeThreeDigits(int n){
