--- a/Exercises/RecurTutor/recw22PROG.html
+++ b/Exercises/RecurTutor/recw22PROG.html
@@ -36,11 +36,11 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Given the following recursive function signature, write the function code such that this function takes a string and returns true if it is read the same forwards or back-wards (palindrome) <br />
+      <p class="problem" id = "test"> Given the following recursive function signature, write the function code such that this function takes a string and returns true if it is read the same forwards or back-wards (palindrome). Assume that the given string has no spacing. For example: eye,or racecar, or madam are considered palindromes.<br />
 </h4>
  <p></p>
  
-<textarea  id="codeTextarea"> boolean CheckPalindrome(String s)
+<textarea  id="codeTextarea"> boolean checkPalindrome(String s)
 {
 		
 
