--- a/Exercises/RecurTutor/recw23PROG.html
+++ b/Exercises/RecurTutor/recw23PROG.html
@@ -41,7 +41,7 @@
 </h4>
  <p></p>
  
-<textarea  id="codeTextarea"> String ReverseStringRecursive (String str)
+<textarea  id="codeTextarea"> String reverseStringRecursive (String str)
 {
 
 
