--- a/Exercises/RecurTutor/recw26PROG.html
+++ b/Exercises/RecurTutor/recw26PROG.html
@@ -40,7 +40,7 @@
 </h4>
  <p></p>
  
-<textarea  id="codeTextarea">int noOfPath (int n)
+<textarea  id="codeTextarea">int numOfPaths (int n)
 {		
 
 
