--- a/Exercises/RecurTutor/recw29PROG.html
+++ b/Exercises/RecurTutor/recw29PROG.html
@@ -38,7 +38,7 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test">
-     Given the following recursive function signature, write the function code such that this function takes a string and should return true if the bracketing operators in str are balanced, which means that they are correctly nested and aligned. If the string is not balanced, the method returns false.
+     Given the following recursive function signature, write the function code such that this function takes a string and should return true if the bracketing operators in str are balanced, which means that they are correctly nested and aligned. If the string is not balanced, the method returns false. Assume that the brackets are { and }. For example, a string "{{}}" considered balance while "{{{}" considered not balanced.
  <br />
 </h4>
 <p></p>
