--- a/Exercises/RecurTutor/recwrc6PROG.html
+++ b/Exercises/RecurTutor/recwrc6PROG.html
@@ -33,7 +33,7 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
    
-      <p class="problem" id = "test">  Given the following recursive write down the missing recursive call such that this function computes the value of y to the x power:
+      <p class="problem" id = "test">  Given the following recursive function write down the missing recursive call such that this function computes the value of y to the x power:
 
     
       <br />
