Various minor changes in list chapter

--- a/Exercises/List/astackPushPRO.html
+++ b/Exercises/List/astackPushPRO.html
@@ -29,7 +29,7 @@ Written by Junyang Chen and Cliff Shaffer
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p>class="problem">Your task in this exercise is to show the
+      <p>Your task in this exercise is to show the
         behavior for the array-based stack's push operation.
         In the array displayed below, the "top" position
         is <b><var>arr_size </var></b>.</p>
