Prog Ex colored in the Adavnced recursion Tutorial

--- a/Exercises/RecurTutor2/BinaryTreeLDSumm.html
+++ b/Exercises/RecurTutor2/BinaryTreeLDSumm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Binary Tree: Summary Questions</title>
+  <title> Binary Tree Leaf Count/Get Depth Exercises </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -11,11 +11,9 @@
   <script src="../../lib/codemirror/mode/clike/clike.js"></script>
 </head>
 
-<body data-height="550" data-width="950">
-  <div class="exercise" data-name="BinaryTreeTF1"></div>
-  <div class="exercise" data-name="BinaryTreeTF2"></div>
-  <div class="exercise" data-name="BinaryTreeTF3"></div>
-  <div class="exercise" data-name="BinaryTreeTF4"></div>
-  <div class="exercise" data-name="BinaryTreeMCQ1"></div>
+<body data-height="580" data-width="1000">
+  <div class="exercise" data-name="btLeafPROG"></div>
+  <div class="exercise" data-name="btDepthPROG"></div>
+  
 </body>
 </html>
