--- a/Exercises/RecurTutor2/BinaryTreeSumSumm.html
+++ b/Exercises/RecurTutor2/BinaryTreeSumSumm.html
@@ -13,6 +13,7 @@
 
 <body data-height="580" data-width="1000">
   <div class="exercise" data-name="btSumAllPROG"></div>
+  <div class="exercise" data-name="bthasPathSumPROG"></div>
   
 </body>
 </html>
