--- a/Exercises/RecurTutor2/BinaryTreeCollectNreturnSumm.html
+++ b/Exercises/RecurTutor2/BinaryTreeCollectNreturnSumm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Binary Tree Check/Count Value Exercises </title>
+  <title> Binary Tree Collect and Return Traversal Exercises </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -12,8 +12,13 @@
 </head>
 
 <body data-height="580" data-width="1000">
+  <div class="exercise" data-name="btLeafPROG"></div>
+  <div class="exercise" data-name="btDepthPROG"></div>
   <div class="exercise" data-name="btCheckValPROG"></div>
   <div class="exercise" data-name="btCntValPROG"></div>
+  <div class="exercise" data-name="btSumAllPROG"></div>
+  <div class="exercise" data-name="bthasPathSumPROG"></div>
+  
   
 </body>
 </html>
