--- a/Exercises/RecurTutor2/BinaryTreeGuidedSumm.html
+++ b/Exercises/RecurTutor2/BinaryTreeGuidedSumm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Binary Tree Leaf Count/Get Depth Exercises </title>
+  <title> Binary Tree Guided Traversal Exercises </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -12,8 +12,7 @@
 </head>
 
 <body data-height="580" data-width="1000">
-  <div class="exercise" data-name="btLeafPROG"></div>
-  <div class="exercise" data-name="btDepthPROG"></div>
+  <div class="exercise" data-name="bstMinPROG"></div>
   
 </body>
 </html>
