--- a/Exercises/RecurTutor2/BinaryTreeLocalSumm.html
+++ b/Exercises/RecurTutor2/BinaryTreeLocalSumm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title> Binary Tree Increment Exercises </title>
+  <title> Binary Tree Local Traversal Exercises </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
