Prog Ex added to RecurTutor2

--- a/Exercises/RecurTutor2/MultipleBinaryTreesSumm.html
+++ b/Exercises/RecurTutor2/MultipleBinaryTreesSumm.html
@@ -13,6 +13,7 @@
 
 <body data-height="580" data-width="1000">
   <div class="exercise" data-name="mbtSamePROG"></div>
+  <div class="exercise" data-name="mbtSwapPROG"></div>
   
 </body>
 </html>
