A prog ex added to RecurTutor2

--- a/Exercises/RecurTutor2/BinaryTreeClctNrtrnSumm.html
+++ b/Exercises/RecurTutor2/BinaryTreeClctNrtrnSumm.html
@@ -18,6 +18,7 @@
   <div class="exercise" data-name="btCntValPROG"></div>
   <div class="exercise" data-name="btSumAllPROG"></div>
   <div class="exercise" data-name="bthasPathSumPROG"></div>
+  <div class="exercise" data-name="btgetDiffPROG"></div>
   
   
 </body>
